fix: ajustes de cors para deploy.